npm install sharp

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.13",
     "astro": "^5.16.15",
     "pixi.js": "^8.15.0",
+    "sharp": "^0.34.5",
     "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
