--- a/talks/TalkList.yaml
+++ b/talks/TalkList.yaml
@@ -21,3 +21,58 @@
   publishDate: 2025-08-01
   excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
   draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
+- title: "接天莲叶"
+  cover: './images/接天莲叶.jpeg'
+  publishDate: 2025-08-01
+  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  draft: false
+
