--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/vue": "^5.1.4",
     "astro": "^5.16.15",
     "pixi.js": "^8.15.0",
     "sharp": "^0.34.5",
-    "simplex-noise": "^4.0.3"
+    "simplex-noise": "^4.0.3",
+    "vue": "^3.5.27"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.430",
