--- a/talks/TalkList.yaml
+++ b/talks/TalkList.yaml
@@ -1,33 +1,39 @@
-- title: "此刻绿洲"
-  cover: "./images/2026-01-31_此刻绿洲.jpeg"
-  publishDate: 2026-01-31
-  align: center
+- title: 此刻绿洲
+  cover: "./images/三亚-椰树.jpeg"
+  publishDate: 2026-02-04
   excerpt: |
+    精神世界逐渐干涸，我失去了分享欲。
+    欲望如难填的沟壑，我一无所有。
     时间若是沙粒，
-    过去未来都将成为沙漠，
-    此刻即绿洲。
+    过去未来将成为沙漠，
+    而此刻即绿洲。
   draft: false
 
 - title: 说吧
   cover: "./images/夜鹿乐队-前世cover.jpeg"
   publishDate: 2024-05-11
-  align: center
   excerpt: |
-    最真的很迷夜鹿。
+    是真的很迷夜鹿。
     夏天在他们的歌声里获得了永生。
-    什么都可以是虚无的，回忆却一定是真的。
+    什么都可以是虚无的，
+    回忆却一定是真的。
   draft: false
 
-- title: "广州高架"
+- title: 广州高架
   cover: "./images/广州高架.jpeg"
   publishDate: 2025-09-25
-  excerpt: "广州的高架很特别，同时可以集齐电动车自行车和机动车。"
+  excerpt: |
+    广州的高架很特别，
+    同时可以集齐
+    电动车自行车和机动车。
   draft: false
 
 - title: "接天莲叶"
   cover: './images/接天莲叶.jpeg'
   publishDate: 2025-08-01
-  excerpt: "从脆上 down 的图，感觉好夏天！好安静。"
+  excerpt: |
+    从脆上 down 的图，
+    感觉好夏天！好安静。
   draft: false
 
 
